SimpleBlockchain update. Fixed bugs, modifed  code to include UTXO, transactions, mempool. Changes in Blockchain, Transactions, Token and SimpleBlockchain class to reflect modifcations.